# OracleDrive

./: .gitignore  ANDROID_FILE_DEPENDENCY_MAP_Version2.md  Dockerfile  README.md  build.gradle  google-services.json  gradle.properties  local.properties  pyproject.toml  requirements.txt  settings.gradle
.github/: dependabot.yml
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.rng  AndroidManifest.xml
app/src/main/aidl/com/genesis/ai/app/ipc/: IAuraDriveService.aidl
app/src/main/assets/binaries/: su-arm64-v8a  su-armeabi-v7a  su-x86  su-x86_64
app/src/main/assets/modules/: module.prop  service.sh
app/src/main/java/com/genesis/ai/app/: GenesisApplication.kt
app/src/main/java/com/genesis/ai/app/data/: FileManagerActivity.kt  MainActivity.kt
app/src/main/java/com/genesis/ai/app/ipc/: AuraDriveServiceImpl.kt
app/src/main/res/anim/: disperse_in.xml  disperse_out.xml
app/src/main/res/drawable/: button_background.xml  dialog_background.xml  edittext_background.xml  ic_notification.xml  ic_settings.xml
app/src/main/res/font/: pixelify_sans_medium.xml
app/src/main/res/layout/: activity_file_manager.xml  activity_halo_view.xml  activity_main.xml  activity_settings.xml  item_file.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  ids.xml  strings.xml  styles.xml  themes.xml
docker/: .dockerignore  Dockerfile  docker-compose.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: create_icons.ps1
server/: app.py
(+25 files in other folders)
