[tool.poetry]
name = "genesis-ai-backend"
version = "0.1.0"
description = "Genesis AI Backend Service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.34.2" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pydantic = { extras = ["email"], version = "^2.4.2" }
python-multipart = "^0.0.20"
httpx = "^0.28.1"
firebase-admin = "^6.2.0"
google-cloud-aiplatform = "^1.36.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
genesis = "server.main:app"
